Add Customer Page

--- a/src/WebApps/Mc2.CrudTest.Presentation/Client/_Imports.razor
+++ b/src/WebApps/Mc2.CrudTest.Presentation/Client/_Imports.razor
@@ -8,3 +8,14 @@
 @using Microsoft.JSInterop
 @using Mc2.CrudTest.Presentation.Client
 @using Mc2.CrudTest.Presentation.Client.Shared
+
+@using Mc2.CrudTest.Presentation.Client.Services
+@using Mc2.CrudTest.Presentation.Shared.Models
+
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.Grids
+@using Syncfusion.Blazor.Buttons
+
+@using Blazored.Toast
+@using Blazored.Toast.Services
+@using Blazored.Toast.Configuration
