--- a/src/WebApps/Mc2.CrudTest.Presentation/Client/Shared/MainLayout.razor
+++ b/src/WebApps/Mc2.CrudTest.Presentation/Client/Shared/MainLayout.razor
@@ -15,3 +15,10 @@
         </article>
     </main>
 </div>
+
+<BlazoredToasts Timeout="3"
+                IconType="IconType.FontAwesome"
+                Position="ToastPosition.BottomRight"
+                RemoveToastsOnNavigation="false"
+                MaxToastCount="3"
+                ShowProgressBar="true" />
